fixing stretch

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,9 @@ div ul {
     list-style: none;
 }
 
-
+h2 {
+    margin: 7.7%;
+}
 
 
 
